# Space-Oddity

./: CMakeLists.txt
assets/scenes/: main.json
docs/: project-vision.aux  project-vision.fdb_latexmk  project-vision.fls  project-vision.tex
img/: Figure_1.eps
include/: AABB.h  Camera.h  Game.h  GameObject.h  HUD.h  Material.h  Mesh.h  Renderer.h  Scene.h  Transform.h  Window.h  helpers.h
shaders/: main.frag  main.vert  shader_main.frag  shader_main.vert
src/: AABB.cpp  Box.cpp  Camera.cpp  Game.cpp  GameObject.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Scene.cpp  Transform.cpp  Window.cpp  helpers.cpp  main.cpp
